update error messages and clean up